--- a/src/components/Entry/Entry.css
+++ b/src/components/Entry/Entry.css
@@ -1,15 +1,31 @@
 .Entry {
     display: flex;
+    flex-direction: column;
+    width: 500px;
 }
 
 .Title {
     display: flex;
     background-color: gray;
-    width: 500px;
     text-align: center;
     padding: 10px 20px;
     height: 50px;
+    width: 100%;
     box-sizing: border-box;
     font-size: 28px;
     color: white;
+    justify-content: center;
+    align-items: center;
+}
+
+.ListsContainer {
+    display: flex;
+    width: 100%;
+}
+
+.List {
+    width: 50%;
+    border: 1px solid gray;
+    justify-content: center;
+    align-items: center;
 }
